setting location redirect

--- a/public/index.html
+++ b/public/index.html
@@ -1,227 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./logo.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta property="og:title" content="Kiri Consoltants"/>
-    <meta property='og:description' content="Kiri Consoltant's website"/>
-    <meta property="og:image" content="./logo.jpg"/>
-    <link rel="manifest" href="./manifest.json" />
-    <link rel="favicon" href="./logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Kiri</title>
-  </head>
-  <body>
-    <!-- hero-section -->
-      <nav>
-        <div class="logo">
-          <img src="./assests/logo.png" alt="Kiri"/>
-        </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#1">About</a></li>
-          <li><a href="#2">Services</a></li>
-          <li><a href="#3">News</a></li>
-          <li><a href="#4">Contacts</a></li>
-        </ul>
-      </nav>
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1>Enhancing Brands,</h1>
-        <h1>Enhancing Lives</h1>
-        <p>We focus on deep customer insights to provide growth.</p>
-        <a href="#4"><button>Contact Us</button></a>
-      </div>
-    </div>
-    <!-- about-us-section -->
-    <div class="about-us" id="1">
-      <div class="grid">
-        <div class="text">
-          <h1>ABOUT US</h1>
-          <p>
-            One thing that sets us apart from other digital marketing agencies is that we are mission-driven and deeply invested in our clients’ work. 
-            We believe that mission-driven companies and social enterprises play a significant role in supporting the economic development and sustainability of the country.
-          </p>
-          <p>
-            Because you focus on changing the world, you deserve the best digital marketing, branding, and PR team to help you achieve your goals and increase impact work. 
-            One that understands the importance of telling your brand story, how to say it, and where to direct it.
-          </p>
-          <h2>Mission Statement!</h2>
-          <p>
-            To contribute to client’s business growth through result oriented, innovative and creative strategies that will deliver the WOW factor.
-          </p>
-          <h2>Core Values</h2>
-          <ul>
-            <li>Professionalism</li>
-            <li>Integrity</li>
-            <li>Passion driven</li>
-            <li>Authenticity</li>
-          </ul>
-        </div>
-        <img src="./assests/Rectangle 2.svg" alt="image"/>
-      </div>
-
-      <h2><span class="red">Recreating</span> Stories and Experiences for manufacturing Industries</h2>
-      <h3 id="2">SERVICES</h3>
-      <p>We focus on deep customer insight to provide growth to our clients as we work on the principle of creativity, identity, innovation and inclusion and diversity.</p>
-    </div>
-    <!-- service-section -->
-    <div class="service-section">
-      <img src="assests/Public relations image.png" alt="image"/>
-      <img src="assests/Brand management image.png" alt="image"/>
-      <img src="assests/Digital Marketing Image.png" alt="image"/>
-      <img class="image" src="assests/Training Image.png" alt="image"/>
-    </div>
-
-    <!-- Testimony -->
-    <div class="testimony">
-      <h2>TESTIMONIALS</h2>
-      <p>We focus on deep customer insight to provide growth to our clients as we work on the principle of creativity, identity, innovation and inclusion and diversity.</p>
-      <div class="card-container">
-        <div class="card">
-          <p>
-            Our brand has exponentially grown to explore social media avenues as it was operating offline. Choosing long term partnership with Kiri Marketing consultancy has broadened our relationship and sales growth experience. Her advice and expertise go a long way in enhancing brand needs & values.
-          </p>
-          <div class="card-footer">
-            <img src="./assests/Profile1.png" alt="avatar"/>
-            <div class="text">
-              <p>Annet Obat & Anita Lukelesia</p>
-              <p>Co-Founders, Laette Closet</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <p>
-            Kiri marketing Consultants is a perfect balance between professionalism and personality. They take their time to dig in and find out what the company needs to expand their market. Their strategies have helped us in aligning our company goals which has seen us grow and sign-up new clients.
-          </p>
-          <div class="card-footer">
-            <img src="./assests/Profile2.png" alt="avatar"/>
-            <div class="text">
-              <p>Evelyne Wandanda</p>
-              <p>Co-founder and managing partner, Innerblast Consultants</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <p>
-            Talent Industry acknowledges the partnership offered by Kiri Marketing Consultants in the success of the 2022 East Africa Poetic Hour Battle on 20th May 2022. We would like to thank them for their outstanding service in event planning, marketing, branding and corporate ushering.
-          </p>
-          <div class="card-footer">
-            <img src="./assests/Profile3.png" alt="avatar"/>
-            <div class="text">
-              <p>Godfrey Emoja</p>
-              <p>Managing Director, Talent Industry</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <p>
-            Recreating Stories and Experiences for manufacturing Industries Recreating Stories and Experiences for manufacturing IndustriesRecreating Stories and Experiences for manufacturing Industries
-          </p>
-          <div class="card-footer">
-            <img src="./assests/Profile4.png" alt="avatar"/>
-            <div class="text">
-              <p>Bryce Zeibu</p>
-              <p>CTA, Spify</p>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-      <div class="rates">
-        <div class="points">
-          <p>Happy Clients</p>
-        </div>
-
-        <div class="points">
-          <p>Positive Feedback</p>
-        </div>
-
-        <div class="points">
-          <p>Loyal Followers</p>
-        </div>
-
-        <div class="points">
-          <p>Project Delivered</p>
-        </div>
-      </div>
-      <h2>WE’VE WORKED WITH</h2>
-
-    </div>
-    <!-- our history -->
-    <div class="history">
-      <h2>OUR HISTORY</h2>
-      <div class="grid">
-        <img src="assests/historyImage.png" alt="image"/>
-        <p>Kiri Marketing Consultants is a Private Limited company founded in 2020 during the Covid 19 pandemic. Our Founder has been a beneficiary of many missions driven projects especially ones that support women entrepreneurs for sustainable impact. She also has professional experience working for a Non-Profit organization. Her experiences and such initiatives have enabled her to harness her skills as a team leader and helped her gain a better perspective when it comes to mission-driven companies. “The company was initially a Social Media Management company for small entrepreneurs and start-up companies and was birthed out of passion. With time and through more experience and realization of the gap in the market, there was a need to re-strategize and rebrand to full Digital Marketing, Branding and PR Agency for mission driven companies, social enterprises and nonprofit organizations.” Eileen, Founder/ CEO.</p>
-      </div>
-    </div>
-    <!-- recent articles -->
-    <div class="recent-articles" id="3">
-      <h2>RECENT ARTICLES</h2>
-      <h1>Get Updated on the latest trends</h1>
-      <div class="grid">
-        <div class="grid-item">
-          <img src="../assests/articleImage1.png" alt="image"/>
-          <h2>News article title</h2>
-          <p>Short description Short description Short description Short description Short </p>
-        </div>
-
-        <div class="grid-item">
-          <img src="../assests/articleImage2.png" alt="image"/>
-          <h2>News article title</h2>
-          <p>Short description Short description Short description Short description Short </p>
-        </div>
-      </div>
-    </div>
-    <!-- get in touch -->
-    <div class="get-in-touch" id="4">
-      <div class="grid">
-        <div class="text">
-          <h1>Let’s talk about</h1>
-          <h1> building your reputation</h1>
-        </div>
-        <form>
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" required/>
-          <label for="email">Email</label>
-          <input type="email" name="email" id="email" required/>
-          <label for="phone">Phone</label>
-          <input type="tel" maxlength="10" name="phone" id="phone" required/>
-          <label for="message">Message</label>
-          <textarea maxlength="500" required></textarea>
-          <button>Send Message</button>
-        </form>
-      </div>
-    </div>
-    <!-- footer -->
-    <footer>
-      <div class="service">
-        <h2>Service</h2>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#1">About</a></li>
-          <li><a href="#2">Service</a></li>
-        </ul>
-      </div>
-
-      <div class="contact">
-        <h2>Contact</h2>
-        <ul>
-          <li><a href="index.html"><i class="fa fa-location"></i> Office Address : Kisumu</a></li>
-          <li><a href="mailto:imranmat254@gmail.com"><i class="fa fa-envelope"></i> Email Us</a></li>
-          <li><a href="tel:0734720752"><i class="fa fa-phone"></i> Call Us 0734720752</a></li>
-        </ul>
-      </div>
-    </footer>
-    <script>
-
-    </script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GSL API</title>
+</head>
+<body>
+  <h1>GSL API</h1>
+  <p>Visit Our website at <a href="http://https://gsl-web-app-5d2b9.web.app/">GSL Website</a></p>
+</body>
 </html>
