links works now

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>GSL API</h1>
-  <p>Visit Our website at <a href="http://https://gsl-web-app-5d2b9.web.app/">GSL Website</a></p>
+  <p>Visit Our website at <a href="https://gsl-web-app-5d2b9.web.app/">GSL Website</a></p>
 </body>
 </html>
